# src/swagger-output.json
@@ -94,11 +94,44 @@
             "in": "path",
             "required": true,
             "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "name": {
+                  "example": "any"
+                },
+                "age": {
+                  "example": "any"
+                },
+                "planet": {
+                  "example": "any"
+                },
+                "gender": {
+                  "example": "any"
+                },
+                "alien": {
+                  "example": "any"
+                },
+                "tendency": {
+                  "example": "any"
+                },
+                "editorial": {
+                  "example": "any"
+                }
+              }
+            }
           }
         ],
         "responses": {
           "204": {
             "description": "No Content"
+          },
+          "400": {
+            "description": "Bad Request"
           },
           "404": {
             "description": "Not Found"
